tdf#112543 Add Edit/Remove hyperlink to text boxes/shapes in Writer

Change-Id: I9052387cf39135c2324b9db03662dc0365323400